CHANGELOG

UNRELEASED
  * FIX : set page to 0 if it might change the number of pages returned
  * FIX : handle distinct parameter automatically
  * FIX : batch response handler gets the proper search state
  * FEATURE : clear refinements by name
  * FEATURE : (breaking) Facets stats and timeout infos are consistently
  grouped in the facet object in the SearchResults
  * FEATURE : (breaking) no more extra queries
  * FEATURE : (breaking) Facets results are stored in an array with an order
  that reflects their definition.
  * FEATURE : Search results explicit definition
  * FEATURE : (breaking) Search parameters as a separate object
  * FEATURE : (breaking) Move callback style to a event based API
  * FEATURE : isDisjunctiveRefined to check if a disjunctive facet is refined
  * FEATURE : basic support for numeric filters
  * FEATURE : version number on the main helper factory
  * TESTS : defaults test

1.0.0
  * Extraction of the helper from the algolia-client-js v2.9.4
  * FEATURE: CommonJS compatibility
  * FEATURE: UMD builds in dist/
  * TESTS: Some basic tests