@@ -4,6 +4,8 @@ UNRELEASED
   * FIX : set page to 0 if it might change the number of pages returned
   * FIX : handle distinct parameter automatically
   * FIX : batch response handler gets the proper search state
+  * FEATURE : getNumericRefinement : get back the value of a specific numeric
+  refinement
   * FEATURE : clear refinements by name
   * FEATURE : (breaking) Facets stats and timeout infos are consistently
   grouped in the facet object in the SearchResults
